--- a/card_scan.html
+++ b/card_scan.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>リアルタイムカード枠検出と文字認識（OCR）</title>
+  <title>リアルタイムカード枠検出とOCR（ボタンで実行）</title>
   <script async src="https://docs.opencv.org/4.x/opencv.js" onload="onOpenCvReady();"></script>
   <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.0.2/dist/tesseract.min.js"></script>
   <style>
@@ -20,13 +20,20 @@
       text-align: center;
       margin-top: 20px;
     }
+    #ocr-button {
+      display: block;
+      margin: 10px auto;
+      padding: 10px 20px;
+      font-size: 16px;
+    }
   </style>
 </head>
 <body>
-  <h1>リアルタイムカード枠検出と文字認識（OCR）</h1>
+  <h1>リアルタイムカード枠検出とOCR（ボタンで実行）</h1>
   <div id="opencv-status" style="font-weight: bold; margin: 1em;"></div>
   <video id="video" autoplay playsinline></video> <!-- 映像は非表示 -->
   <canvas id="canvasOutput"></canvas> <!-- キャンバスサイズを動的に調整 -->
+  <button id="ocr-button">OCRを実行</button>
   <div id="recognized-text">読み取った文字列: <span id="text-output">なし</span></div>
 
   <script>
@@ -35,6 +42,7 @@
     let ctx = canvas.getContext('2d');
     let streaming = false;
     let textOutput = document.getElementById('text-output');
+    let ocrButton = document.getElementById('ocr-button');
 
     function onOpenCvReady() {
       const statusEl = document.getElementById("opencv-status");
@@ -59,11 +67,10 @@
 
         // 動画のメタデータがロードされた後にキャンバスサイズを調整
         video.addEventListener('loadedmetadata', () => {
-          // キャンバスの幅と高さを動画の2倍に設定
           canvas.width = video.videoWidth * 2;
           canvas.height = video.videoHeight * 2;
 
-          // 処理開始
+          // リアルタイム枠検出を開始
           processVideo();
         });
       })
@@ -82,27 +89,64 @@
       // OpenCVで画像処理
       let src = cv.imread(canvas);
       let gray = new cv.Mat();
+      let blurred = new cv.Mat();
+      let edges = new cv.Mat();
 
       // グレースケール変換
       cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
 
-      // OCRで文字認識を実行
+      // ぼかし処理
+      cv.GaussianBlur(gray, blurred, new cv.Size(5, 5), 0);
+
+      // エッジ検出
+      cv.Canny(blurred, edges, 50, 150);
+
+      // 輪郭検出
+      let contours = new cv.MatVector();
+      let hierarchy = new cv.Mat();
+      cv.findContours(edges, contours, hierarchy, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE);
+
+      // 最大面積の輪郭を探す
+      let maxArea = 0;
+      let maxContour = null;
+      for (let i = 0; i < contours.size(); ++i) {
+        let cnt = contours.get(i);
+        let area = cv.contourArea(cnt);
+        if (area > maxArea) {
+          maxArea = area;
+          maxContour = cnt;
+        }
+      }
+
+      if (maxContour) {
+        // 赤線で輪郭を描画
+        let contoursColor = new cv.Scalar(255, 0, 0, 255); // 赤色
+        cv.drawContours(src, contours, -1, contoursColor, 2);
+      }
+
+      // 結果をCanvasに描画
+      cv.imshow('canvasOutput', src);
+
+      // メモリ解放
+      src.delete(); gray.delete(); blurred.delete(); edges.delete();
+      contours.delete(); hierarchy.delete();
+
+      // 次のフレームを処理
+      if (streaming) requestAnimationFrame(processVideo);
+    }
+
+    // OCRをボタンのクリック時に実行
+    ocrButton.addEventListener('click', () => {
       Tesseract.recognize(canvas, 'jpn', {
         logger: info => console.log(info) // ログ出力（進捗状況）
       }).then(({ data: { text } }) => {
         // 認識した文字列を画面に表示
         textOutput.innerText = text.trim() || "なし";
       }).catch(err => {
-        console.error("OCRのエラー: ", err);
+        console.error("OCRエラー: ", err);
         textOutput.innerText = "エラー";
       });
-
-      // メモリ解放
-      src.delete(); gray.delete();
-
-      // 次のフレームを処理
-      if (streaming) requestAnimationFrame(processVideo);
-    }
+    });
   </script>
 </body>
 </html>
