card_scan.html を更新

--- a/card_scan.html
+++ b/card_scan.html
@@ -21,11 +21,13 @@
       margin-top: 20px;
     }
     #ocr-button {
-      display: block;
-      margin: 10px auto;
-      padding: 10px 20px;
-      font-size: 16px;
-    }
+  display: block;
+  margin: 20px auto; /* ボタンの間隔を広げる */
+  padding: 15px 30px; /* ボタンのサイズを大きくする */
+  font-size: 20px; /* フォントサイズを大きくする */
+  font-weight: bold; /* 太字にする（オプション） */
+  cursor: pointer; /* マウスホバー時のポインター表示 */
+}
   </style>
 </head>
 <body>
