card_scan.html を更新

--- a/card_scan.html
+++ b/card_scan.html
@@ -22,11 +22,9 @@
     }
     #ocr-button {
   display: block;
-  margin: 20px auto; /* ボタンの間隔を広げる */
-  padding: 15px 30px; /* ボタンのサイズを大きくする */
-  font-size: 20px; /* フォントサイズを大きくする */
-  font-weight: bold; /* 太字にする（オプション） */
-  cursor: pointer; /* マウスホバー時のポインター表示 */
+  margin: 30px auto; /* ボタンの間隔をさらに広げる */
+  padding: 20px 40px; /* ボタンのサイズをさらに大きくする */
+  font-size: 24px; /* フォントサイズをさらに大きくする */
 }
   </style>
 </head>
