--- a/card_scan.html
+++ b/card_scan.html
@@ -2,9 +2,8 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>リアルタイムカード枠検出とOCR（ボタンで実行）</title>
+  <title>リアルタイムカード枠検出とトリミング</title>
   <script async src="https://docs.opencv.org/4.x/opencv.js" onload="onOpenCvReady();"></script>
-  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.0.2/dist/tesseract.min.js"></script>
   <style>
     video {
       display: none; /* 映像を非表示に設定 */
@@ -14,35 +13,29 @@
       display: block;
       margin: 10px auto;
     }
-    #recognized-text {
-      font-size: 16px;
-      font-weight: bold;
-      text-align: center;
-      margin-top: 20px;
-    }
-    #ocr-button {
+    #trimming-button {
       display: block;
-      margin: 30px auto; /* ボタンの間隔をさらに広げる */
-      padding: 20px 40px; /* ボタンのサイズをさらに大きくする */
-      font-size: 24px; /* フォントサイズをさらに大きくする */
+      margin: 20px auto;
+      padding: 10px 20px;
+      font-size: 18px;
     }
   </style>
 </head>
 <body>
-  <h1>リアルタイムカード枠検出とOCR（ボタンで実行）</h1>
+  <h1>リアルタイムカード枠検出とトリミング</h1>
   <div id="opencv-status" style="font-weight: bold; margin: 1em;"></div>
-  <video id="video" autoplay playsinline></video> <!-- 映像は非表示 -->
-  <canvas id="canvasOutput"></canvas> <!-- キャンバスサイズを動的に調整 -->
-  <button id="ocr-button">OCRを実行</button>
-  <div id="recognized-text">読み取った文字列: <span id="text-output">なし</span></div>
+  <video id="video" autoplay playsinline></video>
+  <canvas id="canvasOutput"></canvas>
+  <button id="trimming-button">トリミング実行</button>
+  <canvas id="trimmedCanvas"></canvas>
 
   <script>
     let video = document.getElementById('video');
     let canvas = document.getElementById('canvasOutput');
+    let trimmedCanvas = document.getElementById('trimmedCanvas');
     let ctx = canvas.getContext('2d');
+    let trimmedCtx = trimmedCanvas.getContext('2d');
     let streaming = false;
-    let textOutput = document.getElementById('text-output');
-    let ocrButton = document.getElementById('ocr-button');
 
     function onOpenCvReady() {
       const statusEl = document.getElementById("opencv-status");
@@ -65,10 +58,9 @@
         video.play();
         streaming = true;
 
-        // 動画のメタデータがロードされた後にキャンバスサイズを調整
         video.addEventListener('loadedmetadata', () => {
-          canvas.width = video.videoWidth * 2;
-          canvas.height = video.videoHeight * 2;
+          canvas.width = video.videoWidth;
+          canvas.height = video.videoHeight;
 
           // リアルタイム枠検出を開始
           processVideo();
@@ -119,8 +111,8 @@
       }
 
       if (maxContour) {
-        // 赤線で輪郭を描画
-        let contoursColor = new cv.Scalar(255, 0, 0, 255); // 赤色
+        // 赤線で輪郭を表示
+        let contoursColor = new cv.Scalar(255, 0, 0, 255);
         cv.drawContours(src, contours, -1, contoursColor, 2);
       }
 
@@ -135,17 +127,57 @@
       if (streaming) requestAnimationFrame(processVideo);
     }
 
-    // OCRをボタンのクリック時に実行
-    ocrButton.addEventListener('click', () => {
-      Tesseract.recognize(canvas, 'jpn', {
-        logger: info => console.log(info) // ログ出力（進捗状況）
-      }).then(({ data: { text } }) => {
-        // 認識した文字列を画面に表示
-        textOutput.innerText = text.trim() || "なし";
-      }).catch(err => {
-        console.error("OCRエラー: ", err);
-        textOutput.innerText = "エラー";
-      });
+    // トリミングを実行
+    document.getElementById('trimming-button').addEventListener('click', () => {
+      // 現在のフレームを処理
+      let src = cv.imread(canvas);
+      let gray = new cv.Mat();
+      let blurred = new cv.Mat();
+      let edges = new cv.Mat();
+
+      // グレースケール変換
+      cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
+
+      // ぼかし処理
+      cv.GaussianBlur(gray, blurred, new cv.Size(5, 5), 0);
+
+      // エッジ検出
+      cv.Canny(blurred, edges, 50, 150);
+
+      // 輪郭検出
+      let contours = new cv.MatVector();
+      let hierarchy = new cv.Mat();
+      cv.findContours(edges, contours, hierarchy, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE);
+
+      // 最大面積の輪郭を探す
+      let maxArea = 0;
+      let maxContour = null;
+      for (let i = 0; i < contours.size(); ++i) {
+        let cnt = contours.get(i);
+        let area = cv.contourArea(cnt);
+        if (area > maxArea) {
+          maxArea = area;
+          maxContour = cnt;
+        }
+      }
+
+      if (maxContour) {
+        // トリミング用の領域を抽出
+        let rect = cv.boundingRect(maxContour);
+        let trimmed = src.roi(rect);
+
+        // 結果を別のキャンバスに描画
+        trimmedCanvas.width = rect.width;
+        trimmedCanvas.height = rect.height;
+        cv.imshow(trimmedCanvas, trimmed);
+
+        // メモリ解放
+        trimmed.delete();
+      }
+
+      // メモリ解放
+      src.delete(); gray.delete(); blurred.delete(); edges.delete();
+      contours.delete(); hierarchy.delete();
     });
   </script>
 </body>
