card_scan_v2.html を更新

--- a/card_scan_v2.html
+++ b/card_scan_v2.html
@@ -1,1 +1,22 @@
-てす
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Card Detection System</title>
+    <script async src="https://docs.opencv.org/4.x/opencv.js"></script>
+    <style>
+        canvas, video {
+            display: block;
+            margin: 0 auto;
+        }
+    </style>
+</head>
+<body>
+    <h1>Card Detection System</h1>
+    <video id="video" width="640" height="480" autoplay></video>
+    <canvas id="canvas" width="640" height="480"></canvas>
+
+    <script src="card_detection.js"></script>
+</body>
+</html>
