--- a/card_scan.html
+++ b/card_scan.html
@@ -2,8 +2,9 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>カード枠検出とトリミング</title>
+  <title>リアルタイムカード枠検出とOCR（ボタンで実行）</title>
   <script async src="https://docs.opencv.org/4.x/opencv.js" onload="onOpenCvReady();"></script>
+  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.0.2/dist/tesseract.min.js"></script>
   <style>
     video {
       display: none; /* 映像を非表示に設定 */
@@ -13,28 +14,35 @@
       display: block;
       margin: 10px auto;
     }
-    #trimming-button {
+    #recognized-text {
+      font-size: 16px;
+      font-weight: bold;
+      text-align: center;
+      margin-top: 20px;
+    }
+    #ocr-button {
       display: block;
-      margin: 20px auto;
-      padding: 10px 20px;
-      font-size: 18px;
+      margin: 30px auto; /* ボタンの間隔をさらに広げる */
+      padding: 20px 40px; /* ボタンのサイズをさらに大きくする */
+      font-size: 24px; /* フォントサイズをさらに大きくする */
     }
   </style>
 </head>
 <body>
-  <h1>カード枠検出とトリミング</h1>
+  <h1>リアルタイムカード枠検出とOCR（ボタンで実行）</h1>
   <div id="opencv-status" style="font-weight: bold; margin: 1em;"></div>
-  <video id="video" autoplay playsinline></video>
-  <canvas id="canvasOutput"></canvas>
-  <button id="trimming-button">トリミング実行</button>
-  <canvas id="trimmedCanvas"></canvas>
+  <video id="video" autoplay playsinline></video> <!-- 映像は非表示 -->
+  <canvas id="canvasOutput"></canvas> <!-- キャンバスサイズを動的に調整 -->
+  <button id="ocr-button">OCRを実行</button>
+  <div id="recognized-text">読み取った文字列: <span id="text-output">なし</span></div>
 
   <script>
     let video = document.getElementById('video');
     let canvas = document.getElementById('canvasOutput');
-    let trimmedCanvas = document.getElementById('trimmedCanvas');
     let ctx = canvas.getContext('2d');
     let streaming = false;
+    let textOutput = document.getElementById('text-output');
+    let ocrButton = document.getElementById('ocr-button');
 
     function onOpenCvReady() {
       const statusEl = document.getElementById("opencv-status");
@@ -57,9 +65,10 @@
         video.play();
         streaming = true;
 
+        // 動画のメタデータがロードされた後にキャンバスサイズを調整
         video.addEventListener('loadedmetadata', () => {
-          canvas.width = video.videoWidth;
-          canvas.height = video.videoHeight;
+          canvas.width = video.videoWidth * 2;
+          canvas.height = video.videoHeight * 2;
 
           // リアルタイム枠検出を開始
           processVideo();
@@ -97,36 +106,22 @@
       let hierarchy = new cv.Mat();
       cv.findContours(edges, contours, hierarchy, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE);
 
-      let bestContour = null;
-      const targetAspectRatio = 88 / 63; // カードの縦横比（約1.4）
-      const tolerance = 0.1; // 縦横比の許容範囲（10%）
-
+      // 最大面積の輪郭を探す
+      let maxArea = 0;
+      let maxContour = null;
       for (let i = 0; i < contours.size(); ++i) {
-        let contour = contours.get(i);
-
-        // 多角形近似で輪郭を単純化
-        let approx = new cv.Mat();
-        cv.approxPolyDP(contour, approx, 0.02 * cv.arcLength(contour, true), true);
-
-        // 頂点が4つである場合（長方形を探す）
-        if (approx.rows === 4) {
-          let rect = cv.boundingRect(approx);
-
-          // 縦横比を計算
-          let aspectRatio = rect.height / rect.width;
-          if (Math.abs(aspectRatio - targetAspectRatio) < tolerance) {
-            bestContour = approx;
-            break; // 最初に見つかった適切な輪郭を使用
-          }
+        let cnt = contours.get(i);
+        let area = cv.contourArea(cnt);
+        if (area > maxArea) {
+          maxArea = area;
+          maxContour = cnt;
         }
-
-        approx.delete();
       }
 
-      if (bestContour) {
-        // 赤線で輪郭を表示
-        let contoursColor = new cv.Scalar(255, 0, 0, 255);
-        cv.drawContours(src, new cv.MatVector([bestContour]), -1, contoursColor, 2);
+      if (maxContour) {
+        // 赤線で輪郭を描画
+        let contoursColor = new cv.Scalar(255, 0, 0, 255); // 赤色
+        cv.drawContours(src, contours, -1, contoursColor, 2);
       }
 
       // 結果をCanvasに描画
@@ -140,63 +135,17 @@
       if (streaming) requestAnimationFrame(processVideo);
     }
 
-    // トリミングを実行
-    document.getElementById('trimming-button').addEventListener('click', () => {
-      // 現在のフレームを処理
-      let src = cv.imread(canvas);
-      let gray = new cv.Mat();
-      let blurred = new cv.Mat();
-      let edges = new cv.Mat();
-
-      // グレースケール変換
-      cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
-
-      // ぼかし処理
-      cv.GaussianBlur(gray, blurred, new cv.Size(5, 5), 0);
-
-      // エッジ検出
-      cv.Canny(blurred, edges, 50, 150);
-
-      // 輪郭検出
-      let contours = new cv.MatVector();
-      let hierarchy = new cv.Mat();
-      cv.findContours(edges, contours, hierarchy, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE);
-
-      let bestContour = null;
-      const targetAspectRatio = 88 / 63; // カードの縦横比（約1.4）
-      const tolerance = 0.1;
-
-      for (let i = 0; i < contours.size(); ++i) {
-        let contour = contours.get(i);
-
-        let approx = new cv.Mat();
-        cv.approxPolyDP(contour, approx, 0.02 * cv.arcLength(contour, true), true);
-
-        if (approx.rows === 4) {
-          let rect = cv.boundingRect(approx);
-          let aspectRatio = rect.height / rect.width;
-          if (Math.abs(aspectRatio - targetAspectRatio) < tolerance) {
-            bestContour = approx;
-            break;
-          }
-        }
-
-        approx.delete();
-      }
-
-      if (bestContour) {
-        let rect = cv.boundingRect(bestContour);
-        let trimmed = src.roi(rect);
-
-        trimmedCanvas.width = rect.width;
-        trimmedCanvas.height = rect.height;
-        cv.imshow(trimmedCanvas, trimmed);
-
-        trimmed.delete();
-      }
-
-      src.delete(); gray.delete(); blurred.delete(); edges.delete();
-      contours.delete(); hierarchy.delete();
+    // OCRをボタンのクリック時に実行
+    ocrButton.addEventListener('click', () => {
+      Tesseract.recognize(canvas, 'jpn', {
+        logger: info => console.log(info) // ログ出力（進捗状況）
+      }).then(({ data: { text } }) => {
+        // 認識した文字列を画面に表示
+        textOutput.innerText = text.trim() || "なし";
+      }).catch(err => {
+        console.error("OCRエラー: ", err);
+        textOutput.innerText = "エラー";
+      });
     });
   </script>
 </body>
